# Stellar-MarketPay

./: .gitignore  CONTRIBUTING.md  README.md  append_type.py  docker-compose.yml  fix.py  fix_boost.py
backend/: .env.example  .eslintrc.json  jest.setup.js  (+3 more)
contracts/marketpay-contract/: Cargo.toml  fix_calls.py
contracts/marketpay-contract/coverage/: tarpaulin-report.html
contracts/marketpay-contract/src/: lib.rs  lib.rs.bak  oracle.rs
contracts/marketpay-contract/test_snapshots/deliverable_oracle_tests/: test_submit_deliverable_match_auto_releases.1.json  test_submit_deliverable_mismatch_enters_dispute.1.json
contracts/marketpay-contract/test_snapshots/event_tests/: test_create_escrow_emits_event.1.json  test_full_lifecycle_events_all_emitted.1.json  test_milestone_released_emits_event.1.json  test_raise_dispute_emits_event.1.json  test_refund_escrow_emits_event.1.json  test_release_escrow_emits_event.1.json  test_start_work_emits_event.1.json
contracts/marketpay-contract/test_snapshots/milestone_oracle_tests/: test_verify_milestone_oracle_rejects_invalid_proof.1.json  test_verify_milestone_oracle_rejects_unauthorized_oracle.1.json  test_verify_milestone_oracle_releases_funds.1.json
contracts/marketpay-contract/test_snapshots/multisig_tests/: test_approve_release_rejected_for_non_multisig_escrow.1.json  test_arbitrator_cannot_equal_client_or_freelancer.1.json  test_duplicate_approval_rejected.1.json  test_freelancer_and_arbitrator_can_release_without_client.1.json  test_non_signer_approval_rejected.1.json  test_single_approval_does_not_release_funds.1.json  test_two_approvals_refund_escrow.1.json  test_two_approvals_release_funds.1.json  test_unilateral_refund_rejected_for_multisig_escrow.1.json  test_unilateral_release_rejected_for_multisig_escrow.1.json
(+239 files in other folders)
