[package]
name = "marketpay-contract"
version = "0.1.0"
edition = "2021"
description = "Stellar MarketPay — Soroban escrow smart contract for freelance payments"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "=22.0.0"
soroban-env-common = "=22.1.0"
soroban-env-host = "=22.1.0"
stellar-xdr = "=22.0.0"
base64ct = "=1.6.0"
zeroize_derive = "=1.4.2"
time-core = "=0.1.2"
indexmap = "=2.1.0"
serde_with = "=3.6.1"
ethnum = "=1.5.0"

[dev-dependencies]
soroban-sdk = { version = "=22.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
